--- a/personal.html
+++ b/personal.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="de">
-  <head>
-    <meta charset="UTF-8">
-    <title>LU06.A01 - Personalien</title>
-  </head>
-  <body>
-
-  </body>
+<html lang='de'>
+<head>
+  <meta charset='UTF-8'>
+  <title>LU06.A01 - Personalien</title></head>
+<body>
+<main>
+  <form action='https://it.bzz.ch/demo/formdata' method='post'><label for='givenname'>name</label>
+    <input
+        id='givenname'
+        name='givenname'
+        type='text'/>
+    <label for='surname'>surname</label>
+    <input id='surname'
+           name='surname'
+           type='text'/>
+    <label
+        for='adress'>Adress
+    </label>
+    <input id='adress' name='adress' type='text'/>
+    <button type='submit'>Send</button>
+    <button type='reset'>Cancel</button>
+  </form>
+</main>
+</body>
 </html>
